# MovieReview

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 17d49b7dc26f_build_db_structure.py  681e35683d55_initial_schema.py  6cca6ba695f2_delete_temporary_tables_after_seeding.py  82539783c5d1_rename_tables_avoiding_hyphens.py  ae351b33de02_add_created_at_column_to_movie_ratings_.py  f92b3b975d5f_delete_temporary_tables_after_seeding.py
app/: logging_config.py  main.py  test_logging.py
app/controllers/: movies.py
app/db/: session.py
app/exceptions/: errors.py
app/models/: __init__.py  director.py  genre.py  models.py  movie.py  rating.py
app/repositories/: movie_repo.py
app/schemas/: movie.py
app/scripts/: seed_check.py  seeddb.py  seeddb.sql
app/services/: movie_service.py
